--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
             <a class="nav-link" routerLinkActive="active" routerLink="/prices">Prices</a>
           </li>
           
-          <li class="nav-item">
+          <li *ngIf="auth.isAuthenticated$ | async" class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/protected" >Protected</a>
           </li>
         </ul>
